# dearlnx

./: TODO.txt  dearlnx.sln
dearlnx/: CMakeLists.txt  camera.cpp  camera.hpp  dearlnx.vcxproj  dearlnx.vcxproj.filters  democlock.hpp  framebuffer.cpp  framebuffer.h  main.cpp  quadrenderer.cpp  quadrenderer.h  quadtree.hpp  quaternion_utils.hpp  scene.hpp  shader.cpp  shader.hpp  spline.cpp  spline.hpp  texture.h  textureglitcher.cpp  textureglitcher.hpp  turboglitcher.hpp  utils.cpp  utils.hpp
dearlnx/cmake/: FindGLEW.cmake
dearlnx/resources/shaders/: basic_fs.txt  basic_vs.txt  texdraw_fs.txt
